--- a/.github/workflows/auto-create-release.yml
+++ b/.github/workflows/auto-create-release.yml
@@ -1,16 +1,26 @@
-name: Create release
-
-on:
-  push:
-    branches: ['main']
-
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Automatic Release Creation
-        uses: lr0pb/generate-release@v0.2.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+---
+  name: "tagged-release"
+  
+  on:
+    push:
+      tags:
+        - "v*"
+  
+  jobs:
+    tagged-release:
+      name: "Tagged Release"
+      runs-on: "ubuntu-latest"
+  
+      steps:
+        # ...
+        - name: "Build & test"
+          run: |
+            echo "done!"
+  
+        - uses: "marvinpinto/action-automatic-releases@latest"
+          with:
+            repo_token: "${{ secrets.GITHUB_TOKEN }}"
+            prerelease: false
+            files: |
+              LICENSE.txt
+              *.jar
