update .gitignore and dashboard.js

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ thunder-tests/thunderActivity.json
 thunder-tests/thunderclient.json
 thunder-tests/thunderCollection.json
 thunder-tests/thunderEnvironment.json
+pages/Untitled-1.js
+pages/Untitled-2.js
